Added author name to the original cnn doc

--- a/cnn_backprop_strides2.html
+++ b/cnn_backprop_strides2.html
@@ -4,7 +4,8 @@ subject: math
 short_name: math
 title: Calculate CNN backprop with padding and stride set to 2
 ---
-
+by Hide Inada
+<br><br>
 In this article, I'll discuss how you can calculate backprop for one layer of a convolutional neural network (CNN) when stride is set to two.
 I would like to thank Mr. Sujit Rai for explaining backpropagation calculation in his article <a href="https://medium.com/@2017csm1006/forward-and-backpropagation-in-convolutional-neural-network-4dfa96d7b37e">Forward And Backpropagation in Convolutional Neural Network</a> 
 in which backprop calculation for 3x3 input, 2x2 kernel, 2x2 output is discussed.  I got an idea to calculate
