--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -603,7 +603,7 @@ Note that this is a just convolution operation done in a reverse way, and we are
 <div class="spacer"></div>
 <h3>2.2. Calculate \(\frac{\partial L}{\partial W}\)</h3>
 <h4>2.2.1. Calculate \(\frac{\partial L}{\partial W^{(1, 1)}}\)</h4>
-Let's focus on first finding the dericvative weights for the first input channel and first output channel.
+Let's focus on first finding the derivative of loss with respect to weights for the first input channel and first output channel.
 <h5>\(\frac{\partial L}{\partial w_{11}^{(1, 1)}}\)</h5>
 
 \begin{equation}
